--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1>Hola mundo: {{nombre}}</h1>
+<app-nav></app-nav>
+<div class="container mt-3">
+  <h1>Hola mundo: {{nombre}}</h1>
+</div>
+<app-footer></app-footer>
