--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,3 +1,12 @@
-<p>
-  nav works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: crimson; ">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link text-white" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="#">Nosotros</a>
+      </li>
+    </ul>
+  </div>
+</nav>
