--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -12,6 +12,9 @@
       <li class="nav-item">
         <a class="nav-link text-white" href="#">Nosotros</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="#">Contacto</a>
+      </li>
     </ul>
   </div>
 </nav>
