--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -1,3 +1,2 @@
-<p>
-  contacto works!
-</p>
+<h1>Componente Contacto</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam tempora error magni, nemo atque consequuntur ipsa placeat ex quidem cum incidunt quod qui, aliquam aliquid officia aut illum distinctio itaque?</p>
