--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,2 @@
-<p>
-  home works!
-</p>
+<h1>Componente Home</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique enim eius, atque dolore ad nulla, iusto repellat deleniti quibusdam assumenda, possimus quae aliquid dignissimos? Vero repellendus beatae qui nobis alias.</p>
