--- a/src/app/nosotros/nosotros.component.html
+++ b/src/app/nosotros/nosotros.component.html
@@ -1,3 +1,2 @@
-<p>
-  nosotros works!
-</p>
+<h1>Componente Nosotros</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim dolores expedita eum, nulla voluptatum quas debitis, minus quos, nihil velit laudantium officia porro. Optio impedit fugit cumque quia maiores dolores!</p>
