--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -7,13 +7,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link text-white" href="#">Home</a>
+        <a class="nav-link text-white" href="/home">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="#">Nosotros</a>
+        <a class="nav-link text-white" href="/nosotros">Nosotros</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="#">Contacto</a>
+        <a class="nav-link text-white" href="/contacto">Contacto</a>
       </li>
     </ul>
   </div>
