--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,19 +1,19 @@
 <nav class="navbar navbar-expand-lg navbar-light"  style="background-color: crimson;">
-  <a class="navbar-brand text-white" href="#">Angular</a>
+  <a class="navbar-brand text-white" [routerLink]="['/']">Angular</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link text-white" href="/home">Home</a>
+      <li class="nav-item">
+        <a class="nav-link text-white" [routerLink]="['/home']">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="/nosotros">Nosotros</a>
+        <a class="nav-link text-white" [routerLink]="['/nosotros']">Nosotros</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="/contacto">Contacto</a>
+        <a class="nav-link text-white" [routerLink]="['/contacto']">Contacto</a>
       </li>
     </ul>
   </div>
